<resources>
    <string name="app_name">WhoGO</string>
    <string name="filterPageName">Filter</string>
    <string name="facebook_app_id">250727555326472</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_purchase">PurchaseActivity</string>
    <string name="title_activity_facebook_login">Facebook Login</string>
    <string name="profile_me">My Profile Pic</string>
    <string name="profile_other">Other profile pic</string>
    <string name="message_hint">Say anything</string>
    <string name="send">Send Notification</string>
    <string-array name="popUp">
        <item>All Cities</item>
        <item>Ramat Gan</item>
        <item>Tiberias</item>
        <item>Herzliya</item>
        <item>Be\'er Sheva</item>
        <item>Kiryat Motzkin</item>
        <item>Bnei Brak</item>
        <item>Ari\'el</item>
        <item>Nahariyya</item>
        <item>Rehovot</item>
        <item>Tel Aviv-Yafo</item>
        <item>Jerusalem</item>
        <item>Afula</item>
        <item>Petah Tikva</item>
    </string-array>
    <string-array name="eventServiceTitles">
        <item>Artist</item>
        <item>Driving</item>
        <item>Walking</item>
        <item>Toilet</item>
        <item>Parking</item>
        <item>Capacity</item>
        <item>ATM</item>
    </string-array>
    <string-array name="autoComplateStrings">
        <item>Sport</item>
        <item>Health</item>
        <item>Food</item>
        <item>Drinks</item>
        <item>Event</item>
        <item>StandUp</item>
        <item>Music</item>
        <item>Party</item>
        <item>Schools</item>
        <item>experience</item>
    </string-array>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_payment">PaymentActivity</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notification</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="userDetailes">My Profile</string>
    <string name="updateProfile">Updating My Profile</string>
    <string name="tickets">My Events Tickets</string>
    <string name="title_activity_events_tickets">EventsTickets</string>
    <string name="title_activity_mipo">Mipo</string>
    <string name="ticketLinkEvent"><a href="">link to the event</a></string>
    <string-array name="filters">
        <item>SPORTS_EVENT</item>
        <item>TOURISM_EVENT</item>
        <item>PARTY_EVENT</item>
        <item>BUSINESS_EVENT</item>
        <item>COMEDY_EVENT</item>
        <item>WORKSHOP_EVENT</item>
        <item>KIDS_EVENT</item>
        <item>LIFESTYLE_EVENT</item>
        <item>MUSIC_EVENT</item>
        <item>ART_EVENT</item>
        <item>BOOK_EVENT</item>
        <item>MOVIE_EVENT</item>
        <item>FUNDRAISER</item>
        <item>VOLUNTEERING</item>
        <item>FAMILY_EVENT</item>
        <item>FESTIVAL_EVENT</item>
        <item>NEIGHBORHOOD</item>
        <item>RELIGIOUS_EVENT</item>
        <item>SHOPPING</item>
        <item>NIGHTLIFE</item>
        <item>THEATER_EVENT</item>
        <item>DINING_EVENT</item>
        <item>FOOD_TASTING</item>
        <item>FITNESS</item>
        <item>DANCE_EVENT</item>
        <item>CONFERENCE_EVENT</item>
        <item>MEETUP</item>
        <item>CLASS_EVENT</item>
        <item>LECTURE</item>
        <item>OTHER</item>
    </string-array>
    <string-array name="sportFiltersAllLanguages">
        <item>Basketball</item>
        <item>Football</item>
        <item>Tennis</item>
    </string-array>
    <string-array name="sportFiltersName">
        <item>Basketball</item>
        <item>Football</item>
        <item>Tennis</item>
    </string-array>
    <string-array name="travelFiltersAllLanguages">
        <item>Tracks</item>
        <item>Light</item>
        <item>Heavy</item>
    </string-array>
    <string-array name="travelFiltersName">
        <item>Tracks</item>
        <item>Light</item>
        <item>Heavy</item>
    </string-array>
    <string-array name="drinkFiltersAllLanguages">
        <item>Beer</item>
        <item>Whine</item>
        <item>Vodka</item>
    </string-array>
    <string-array name="drinkFiltersName">
        <item>Beer</item>
        <item>Whine</item>
        <item>Vodka</item>
    </string-array>
    <string-array name="businessFiltersAllLanguages">
        <item>Cars sale</item>
        <item>Clothes sale</item>
        <item>Apartments sale</item>
    </string-array>
    <string-array name="businessFiltersName">
        <item>Cars sale</item>
        <item>Clothes sale</item>
        <item>Apartments sale</item>
    </string-array>
    <string-array name="fashionFiltersAllLanguages">
        <item>Koko Shanell</item>
        <item>GAP</item>
        <item>H_M</item>
    </string-array>
    <string-array name="fashionFiltersName">
        <item>Koko Shanell</item>
        <item>GAP</item>
        <item>H_M</item>
    </string-array>
    <string-array name="musicFiltersName">
        <item>Trans</item>
        <item>Disco</item>
        <item>Pop</item>
    </string-array>
    <string-array name="musicFiltersAllLanguages">
        <item>Trans</item>
        <item>Disco</item>
        <item>Pop</item>
    </string-array>
    <string-array name="governmentFiltersAllLanguages">
        <item>Security</item>
        <item>Services</item>
        <item>Law</item>
    </string-array>
    <string-array name="governmentFiltersName">
        <item>Security</item>
        <item>Services</item>
        <item>Law</item>
    </string-array>
    <string-array name="homeLifeStyleFiltersAllLanguages">
        <item>High Style</item>
        <item>Medium Style</item>
        <item>Low Style</item>
    </string-array>
    <string-array name="homeLifeStyleFiltersName">
        <item>High Style</item>
        <item>Medium Style</item>
        <item>Low Style</item>
    </string-array>
    <string-array name="educationFiltersAllLanguages">
        <item>University</item>
        <item>College</item>
        <item>First Grade</item>
    </string-array>
    <string-array name="educationFiltersName">
        <item>University</item>
        <item>College</item>
        <item>First Grade</item>
    </string-array>
    <string-array name="atms">
        <item>Unknown</item>
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="toilets">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>Unknown</item>
    </string-array>
    <string-array name="colors">
        <item>Yellow</item>
        <item>Green</item>
        <item>Blue</item>
        <item>Pink</item>
        <item>Orange</item>

    </string-array>
    <string-array name="eventPriceFilter">
        <item>No Filter</item>
        <item>Free</item>
        <item>Up To 50</item>
        <item>Up To 100</item>
        <item>Up To 200</item>
        <item>More then 200</item>
    </string-array>
    <string-array name="eventDateFilter">
        <item>No Filter</item>
        <item>Today</item>
        <item>Tomorrow</item>
        <item>Day After Tomorrow</item>
        <item>Weekend</item>
        <item>Select a Date</item>
        <item>Select Dates Range</item>
    </string-array>
    <string name="enter_valid_date">Please enter valid date and time</string>
    <string name="login">Login</string>
    <string name="create_event">Create Event</string>
    <string name="name">Name*</string>
    <string name="pick_date">Pick a date</string>
    <string name="artist">Artist</string>
    <string name="description">Description*</string>
    <string name="next">Next</string>
    <string name="user_name">User Name</string>
    <string name="email_address_missing">Email address is missing</string>
    <string name="user_name_missing">User name is missing</string>
    <string name="select_picture">Select Picture</string>
    <string name="image_upload">Your Profile Image Upload</string>
    <string name="submit">Submit</string>
    <string name="what_to_share">What would you like to share?</string>
    <string name="app_pafw">App Page</string>
    <string name="web_page">Web Page</string>
    <string name="mipo_party_real_time">Mipo Party Real Time</string>
    <string name="gust_entered">Guest\'s Entered:</string>
    <string name="qr_scanner">QR - Scanner</string>
    <string name="push">Push:</string>
    <string name="no_tickets">No Tickets</string>
    <string name="edit_event">Edit Event</string>
    <string name="food_drink_convention">#Food Drink #Convention</string>
    <string name="eventName">Event Name</string>
    <string name="event_date">Event Date</string>
    <string name="event_price">Ticket Price</string>
    <string name="Order_Date">Order Date</string>
    <string name="more_details">More Details</string>
    <string name="update_picture">Update Picture</string>
    <string name="get_tickets">Get Tickets</string>
    <string name="real_time">By Distance</string>
    <string name="events_stats">Event Status</string>
    <string name="price">Price*</string>
    <string name="quantity">Tickets Quantity/Seats*</string>
    <string name="address">Full Address*</string>
    <string name="ibn_gabirol_tel_aviv">Ibn Gabirol 23, Tel-Aviv</string>
    <string name="validate_address">Validate Address</string>
    <string name="place">Place*</string>
    <string name="hall_capacity">Hall Capacity</string>
    <string name="parking">Parking</string>
    <string name="tags">Tags</string>
    <string name="toilet">Toilet</string>
    <string name="atm">ATM</string>
    <string name="finish">Save</string>
    <string name="free">Free</string>
    <string name="event_image_upload">Event Image Upload</string>
    <string name="price_per_seat">Price per seat</string>
    <string name="Handicap_toilets">Handicap_Toilets</string>
    <string name="select_more_tags">Select a topic,you are able to manually add more in Tags</string>
    <string name="Pick_filter">Pick a filter*</string>
    <string name="share_with_contacts">Share Event</string>
</resources>