<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/scrollView3"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/quantity"/>

        <EditText
            android:id="@+id/et_quantity"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:imeActionLabel="Done"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:inputType="number"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/price"/>

            <EditText
                android:id="@+id/et_price"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:imeActionLabel="Done"
                android:layout_marginTop="20dp"
                android:textSize="16sp"
                android:layout_centerHorizontal="true"
                android:inputType="number"/>

        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBoxPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:visibility="gone"
                android:text="@string/price_per_seat"/>
            <CheckBox
                android:id="@+id/checkBoxFree"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_above="@+id/yET"
                android:layout_toEndOf="@+id/tagsET"
                android:layout_toRightOf="@+id/tagsET"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/free"/>
            <Button
                android:id="@+id/btn_price_details"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Price details"
                android:visibility="gone"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_address"
                android:layout_width="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/address"/>

            <EditText
                android:id="@+id/et_address"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/tv_address"
                android:textSize="16sp"
                android:layout_centerHorizontal="true"
                android:hint="@string/ibn_gabirol_tel_aviv"
                android:imeActionLabel="Done"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_validate_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/validate_address"
                android:textSize="10sp"/>

            <ImageView
                android:id="@+id/iv_val_add"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_weight="1"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:text="@string/place"/>

            <EditText
                android:id="@+id/et_place"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textSize="15sp"
                android:layout_marginTop="35dp"
                android:imeActionLabel="Done"
                android:singleLine="true"/>
        </RelativeLayout>

        <fr.ganfra.materialspinner.MaterialSpinner
            android:id="@+id/atmSpinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:ms_alignLabels="false"
            app:ms_arrowColor="@color/colorPrimary"
            app:ms_arrowSize="16dp"
            app:ms_baseColor="@color/colorPrimary"
            app:ms_enableErrorLabel="false"
            app:ms_enableFloatingLabel="false"
            app:ms_errorColor="@color/Red"
            app:ms_hint="@string/atm"
            app:ms_hintColor="@color/DarkRed"
            app:ms_multiline="false"
            app:ms_thickness="2dp"/>

        <fr.ganfra.materialspinner.MaterialSpinner
            android:id="@+id/toiletSpinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:ms_alignLabels="false"
            app:ms_arrowColor="@color/colorPrimary"
            app:ms_arrowSize="16dp"
            app:ms_baseColor="@color/colorPrimary"
            app:ms_enableErrorLabel="false"
            app:ms_enableFloatingLabel="false"
            app:ms_errorColor="@color/Red"
            app:ms_hint="@string/toilet"
            app:ms_hintColor="@color/DarkRed"
            app:ms_multiline="false"
            app:ms_thickness="2dp"/>

        <fr.ganfra.materialspinner.MaterialSpinner
            android:id="@+id/handicapToiletSpinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:ms_alignLabels="false"
            app:ms_arrowColor="@color/colorPrimary"
            app:ms_arrowSize="16dp"
            app:ms_baseColor="@color/colorPrimary"
            app:ms_enableErrorLabel="false"
            app:ms_enableFloatingLabel="false"
            app:ms_errorColor="@color/Red"
            app:ms_hint="@string/Handicap_toilets"
            app:ms_hintColor="@color/DarkRed"
            app:ms_multiline="false"
            app:ms_thickness="2dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_next1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:visibility="gone"
                android:text="@string/next"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>