<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_capacity"
                    android:layout_width="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_height="wrap_content"
                    android:text="@string/hall_capacity"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:text="(Optional)"
                    android:visibility="gone"
                    android:textSize="10sp"/>
                <EditText
                    android:id="@+id/et_capacity"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textSize="16sp"
                    android:layout_centerHorizontal="true"
                    android:imeActionLabel="Done"
                    android:inputType="number"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_parking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:text="@string/parking"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:text="(Optional)"
                    android:visibility="gone"
                    android:textSize="12sp"/>
                <EditText
                    android:id="@+id/et_parking"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:imeActionLabel="Done"
                    android:textSize="16sp"
                    android:layout_marginTop="30dp"
                    android:layout_centerHorizontal="true"
                    android:inputType="number"/>
            </RelativeLayout>


        <fr.ganfra.materialspinner.MaterialSpinner
            android:id="@+id/filterSpinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:ms_alignLabels="false"
            app:ms_arrowColor="@color/colorPrimary"
            app:ms_arrowSize="16dp"
            app:ms_baseColor="@color/colorPrimary"
            app:ms_enableErrorLabel="false"
            app:ms_enableFloatingLabel="true"
            app:ms_errorColor="@color/Red"
            app:ms_floatingLabelText="@string/select_more_tags"
            app:ms_hint="@string/Pick_filter"
            app:ms_hintColor="@color/DarkRed"
            app:ms_multiline="false"
            app:ms_thickness="2dp"/>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

             <TextView
                    android:id="@+id/tv_tags"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_centerHorizontal="true"                   android:text="@string/tags"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="(Optional)"
                    android:visibility="gone"
                    android:textSize="12sp"/>
                <EditText
                    android:id="@+id/et_tags"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:imeActionLabel="Done"
                    android:layout_marginTop="30dp"
                    android:textSize="12sp"
                    android:singleLine="true"/>
          </RelativeLayout>


        <Button
            android:id="@+id/btn_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/event_image_upload"/>

        <ImageView
            android:id="@+id/pic"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:visibility="gone"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/share_with_contacts"
            android:id="@+id/checkBoxShareContacts"
            android:layout_gravity="center_horizontal" />


        <Button
            android:id="@+id/btn_next2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="25dp"
            android:text="@string/finish"/>

    </LinearLayout>
</ScrollView>